# CppTopoNamer

./: CMakeLists.txt
include/: .OccObjectTrackers.h.swp  BaseTracker.h  EdgeTracker.h  FaceTracker.h  IEdge.h  IFace.h  INamedShape.h  INamedSubShape.h  IShape.h  IShapeWithSubs.h  ISolid.h  ISolidManager.h  NamedBaseFace.h  NamedEdge.h  NamedShape.h  NamedSubEdge.h  OccObjectTrackers.h  SolidManager_Primitive.h  SolidManager_Types.h
include/Managers/: PrimitiveSolid.h  Types.h
include/OccTopology/: OccEdge.h  OccFace.h  OccSolid.h
include/Topology/: IEdge.h  IFace.h  ISolid.h  ISolidManager.h  Types.h
src/: BaseTracker.cpp  CMakeLists.txt  EdgeTracker.cpp  FaceTracker.cpp  INamedShape.cpp  INamedSubShape.cpp  NamedBaseFace.cpp  NamedEdge.cpp  NamedShape.cpp  NamedSubEdge.cpp  OccEdge.cpp  OccFace.cpp  OccObjectTrackers.cpp  OccSolid.cpp  PrimitiveSolid.cpp  SolidManager_Primitive.cpp
test/: .MockObjectMaker.cpp.swp  .MockObjectMaker.h.swp  BaseTrackerTester.cpp  CMakeLists.txt  EdgeTrackerTester.cpp  FaceTrackerTester.cpp  MockObjectMaker.cpp  MockObjectMaker.h  Mock_TopoDS_Edge.cpp  Mock_TopoDS_Face.cpp  Mock_TopoDS_Shape.cpp  NamedBaseFaceTester.cpp  NamedEdgeTester.cpp  NamedShapeTester.cpp  NamedSubEdgeTester.cpp  OccObjectTrackerTester.cpp  SolidManager_PrimitiveTester.cpp  TestMockObjectMaker.cpp  a.out  functions.cmake
test/Managers/: CMakeLists.txt  PrimitiveSolidTester.cpp  occPrimitiveSolidTester.cpp
test/Misc/: CMakeLists.txt  IndexWrappersTester.cpp
test/helpers/: Box.cpp  CMakeLists.txt  EdgeTester.cpp  FaceTester.cpp  MockObjectMaker.cpp  MockObjectMakerTester.cpp  Mock_Box.cpp  Mock_Edge.cpp  Mock_Face.cpp  Mock_Shape.cpp  Mock_Solid.cpp  Mock_TopoDS_Edge.cpp  Mock_TopoDS_Face.cpp  NamedShape_MockImpl.cpp  OccObjectMaker.cpp  ShapeTester.cpp  SolidTester.cpp  functions.cmake
test/include/: .MockObjectMaker.h.swp  Box.h  Edge.h  Face.h  MockObjectMaker.h  Mock_Box.h  Mock_Edge.h  Mock_Face.h  Mock_Shape.h  Mock_Solid.h  Mock_TopoDS_Edge.h  Mock_TopoDS_Face.h  Mock_TopoDS_Shape.h  NamedShape_MockImpl.h  OccObjectMaker.h  Shape.h
test/include/Base/: Exception.h
